--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mpeg">
+        <source src="./music/hbd.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Priya</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">My Panda ;_; <br> I really like your name btw!</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                    Happy Birthday, Priya! 🌎 Tum earth pe sirf mere liye aaye ho, mere Nakhra uthana! Thanks for being my reason to smile every day. Tumhara hona hi sabse badi blessing hai, aur tumhare saath mera har din amazing hai. Tum hamesha aise hi mere pass raho, mere sath raho. Happy wala B’day, my special one! 🎉💕
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May the Ayush always be with you! ;)</h5>
             </div>
         </div>
 
